5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1575_1560.log
== TEST (2019-03-13 12:56:29) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
print(string..lower())
-- ERROR:
File "XXXX", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:56:33) 
-- CODE:
string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
print(string..lower())
-- EXECUTION TIME:
0.151157
-- ERROR:
  File "/home/codebench/codes/1575/1560/main.py", line 1
    string = ""Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.""
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:57:23) 
-- CODE:
string = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string..lower())
-- ERROR:
File "XXXX", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:57:26) 
-- CODE:
string = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string..lower())
-- EXECUTION TIME:
0.180173
-- ERROR:
  File "/home/codebench/codes/1575/1560/main.py", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:57:45) 
-- CODE:
string =("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string..lower())
-- ERROR:
File "XXXX", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:57:47) 
-- CODE:
string =("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string..lower())
-- EXECUTION TIME:
0.144164
-- ERROR:
  File "/home/codebench/codes/1575/1560/main.py", line 2
    print(string..lower())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:58:00) 
-- CODE:
string =("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:58:03) 
-- CODE:
string =("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string.lower())
-- EXECUTION TIME:
0.182313
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
